# airmata

./: .clang-format  .gitignore  CMakeLists.txt  compile_flags.txt  licence  readme.md
docs/: actions.md  bufferobjects.md  document-objects.md  keybinding.md  modes.md
src/: main.cpp
src/Core/: ArgumentSolver.cpp  ArgumentSolver.h  ArgumentSolver.hpp  Context.h  Context.hpp  EntryPoint.cpp  EntryPoint.h  EntryPoint.hpp  Integer.h  Integral.h  Mode.cpp  Mode.h  Program.cpp  Program.h
src/Core/Container/: Function.h  HashMap.hpp  HashTable.h  RC.h  String.hpp  Vector.cpp  Vector.h  Vector.hpp
src/Core/Event/: BufferEvent.h  Event.cpp  Event.h  Event.hpp  EventSystem.h  KeyEvent.cpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.h
src/Core/IO/: Action.cpp  Action.h  Action.hpp  Loop.cpp  Loop.h  Loop.hpp  LoopContext.h  LoopContext.hpp  Resource.cpp  Resource.h  Resource.hpp
src/Core/UI/: Buffer.h  InputSystem.cpp  InputSystem.h  Sequence.h  Sequence.hpp  View.h
src/Core/UI/Component/: Buffer.cpp  Buffer.h  Buffer.hpp  Component.cpp  Component.h  Component.hpp  StatusBar.cpp  StatusBar.h  StatusBar.hpp
src/Core/UI/Object/: Buffer.cpp  Buffer.h  Document.cpp  Document.h  Object.cpp  Object.h  StatusBar.cpp  StatusBar.h
src/Core/Utility/: ByteChecker.cpp  ByteChecker.h  ByteChecker.hpp  EnumBitManipulator.h  EnumBitManipulator.hpp
